feat: refactor app

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="img/weather.png" type="image/x-icon">
+    <link rel="icon" href="images/weather.png" type="image/x-icon">
     <title>Weather App</title>
 </head>
 <body>
@@ -12,8 +12,7 @@
         <h1>Weather App</h1>
     </header>
 
-    <div class="location">
-    </div>
+    <div class="location"></div>
 
     <div class="temperature-selection">
         <button id="fahrenheit" class="active">°F</button>
@@ -21,6 +20,7 @@
     </div>
 
     <div class="forecast"></div>
+
+    <script type="module" src="scripts/app.js"></script>
 </body>
-<script src="scripts/app.js"></script>
 </html>
