feat: converted in pwa

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- import manifest.json -->
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="images/weather.png" type="image/x-icon">
     <title>Weather App</title>
