feat: add cache storage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- import manifest.json -->
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="images/weather.png" type="image/x-icon">
+    <link rel="icon" href="images/icons/icon-144x144.png" type="image/x-icon">
     <title>Weather App</title>
 </head>
 <body>
