--- a/index.html
+++ b/index.html
@@ -10,19 +10,34 @@
     <title>Weather App</title>
 </head>
 <body>
+    <button class="menu-button">Menu</button>
+
+    <div class="menu">
+        <button class="close-menu">x</button>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/pages/about.html">About</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="/pages/settings.html">Settings</a></li>
+        </ul>
+    </div>
+
+    <container class="container">
     <header>
         <h1>Weather App</h1>
     </header>
 
     <div class="location"></div>
 
-    <div class="temperature-selection">
-        <button id="fahrenheit" class="active">°F</button>
-        <button id="celsius">°C</button>
+        <div class="temperature-selection">
+            <button id="fahrenheit" class="active">°F</button>
+            <button id="celsius">°C</button>
+        </div>
     </div>
 
     <div class="forecast"></div>
 
     <script type="module" src="scripts/app.js"></script>
+    <script src="scripts/menu.js"></script>
 </body>
 </html>
